# RR_layer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
RR_layer/: __init__.py  rr_layer.py
examples/autoencoder/: RRAE.pth  baseline.pth  compare.ipynb  generate_data.ipynb  train_RRAE.ipynb  train_baseline.ipynb
tests/: test_RR_layer.py
